welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:6: error: value ! is not a member of Boolean
    else (bSmile!) {
                ^monkeyTrouble:10: error: Boolean does not take parameters
  }else(aSmile) {
                ^